karl/views/static/themedstyles.css
/* ... */
.generic-layout #center.fill-width,
.community-layout #center.fill-width {
    width: 900px;
}
.generic-layout #center,
.community-layout #center {
    width: 705px;
}
#right {
 	float: right;
	width: 262px;
	display: block;
	padding-top: 0px;
	margin: 0 14px;
	overflow: visible;
}
#footer {
  width: 932px;
  margin: 0px auto;
  padding: 20px 20px 70px;
  color: #7E7E7E;
  text-align: center;
}

/** =HEADER
----------------------------------------------- */
#header-user-menu {
  font-size: 0.9em;
  text-transform: uppercase;
  padding-top: 0.5em;
  padding-bottom: 0.5em;
  text-align: right;
}
ul.horListing {
  margin: 0 20px;
  padding: 0;
  list-style: none;
}
ul.horListing li {
  margin: 0;
  padding: 0;
  list-style: none;
  display: inline;
}
.horListing a,
.horListing a:visited {
  color: #639332;
  text-decoration: none;
  padding: 0 0.5em;
}
.horListing li.noborder a {
  padding-right: 0;
}
#header-top {
  background: #fff url("images/gradient-top.png") top left repeat-x;
  height: 55px;
}
#logo {
  float: left;
  margin: 7px 0px 0px 15px;
  width: 129px;
  height: 32px;
}
#logo a img {
  border: none;
  width: 129px;
  height: 32px;
}

/** =HEADER MENU / ROUNDED TABS
----------------------------------------------- */
#spo-header-top {
 	width: 100%;
	display: block;
	position: relative;
}
ul#header-menu {
    padding: 0 20px 0 0;
    margin: -1px 0 0;
    list-style: none none;
    float: right;
    width: 915px;
}
ul#header-menu li {
    padding: 0;
    margin: 0 0 0 5px;
    float: right;
    position: relative;
}
ul#header-menu li a {
    text-transform: uppercase;
    text-decoration: none;
    font-size: 10px;
    line-height: 14px;
    padding: 2px 27px;
    color: #507988;
    outline: 0;
    background-color: #CFD5DA;
    border-width: 0 1px 1px;
    border-color: #bcc2c7;
    border-style: solid;
    border-radius: 0 0 10px 10px;
    -moz-border-radius: 0 0 10px 10px;
}

/** =SEARCHBOX
----------------------------------------------- */
#searchbox {
  float: right;
  vertical-align: top;
  margin: 10px 20px 0 0;
  padding: 0 !important;
  text-align: right;
  width: 520px;
}
#searchbox form {
  margin: 0;
  padding: 0;
}
input#livesearch-input {
  float: right;
  display: inline;
  border: 1px solid #e4e9eb;
  margin-right: 5px;
  line-height: 26px !important;
  height: 26px !important;
  width: 450px !important;
  font-size: large;
  vertical-align: top;
  float: left;
  padding: 0 !important;
}
#livesearch-button {
  float: right;
  width: 47px;
  height: 24px;
  line-height: 24px;
  padding: 0;
  margin: 0;
}
#searchbox .advancedSearch {
  display: block;
  font-size: 1.2em;
  line-height: 1em;
}
#searchbox span a,
#searchbox span a:visited {
  font-size: 0.8em;
  color: #63707C;
  padding: 0;
  margin: 0;
  text-decoration: none;
}

/** =FOOTER
----------------------------------------------- */
#footer a {
  text-transform: uppercase;
  color: #7E7E7E;
  text-decoration: none;
}
#footer .selected {
  font-weight: bold;
}
#footer .osi-logo {
  float: left;
  margin: 0px;
  padding: 0px;
}
#footer .osi-logo img {
  border: none;
}
#footer .extra {
  float: right;
  font-size: 0.9em;
}
#footer .extra a {
  color: #639332;
}

/** =CENTER CONTENT
----------------------------------------------- */
#center div .sections {
	padding: 1em 0 0;
	display: block;
	overflow: hidden;
	border-top: 1px solid #cccccc;
	margin-top: 1.5em;
}
#center .sections h3 {
  font-weight: normal;
  letter-spacing: 0px;
  font-family: Georgia,Palatino,"Times New Roman";
  color: #639332;
  font-size: 1.6em;
}
#center div .teaser {
	padding: 0;
	color: #FFF;
	overflow: hidden;
}
#center .teaser img {
  margin: 0em 0em 1em 0em;
  border: none;
}
#center div .sections p {
	margin: 7px 0px 0px 0px;
	padding: 0px;
}
#center div .sections a {
	color: #3A74A9;
	font-family: Verdana,Geneva,Arial,Helvetica,sans-serif;
	text-decoration: none;
	padding: 0;
	margin: 0;
}
#center div .sections h2 {
	margin-left: 0px;
}
div.center_intranet {
  margin: 0 0 15px !important;
  float: left;
  width: 399px;
}
div.center_boards {
  margin: 0 0 15px !important;
  float: left;
  width: 675px;
}

/** =PEOPLE DIRECTORY
----------------------------------------------- */
ul#peopledir-tabs {
  padding: 3px 0 3px 1em;
  margin: 0;
  margin-top: 1em;
  list-style: none;
}
ul#peopledir-tabs li {
  list-style: none;
  margin: 0;
  display: inline;
}
ul#peopledir-tabs li a {
  padding: 3px 2em;
  margin-left: 3px;
  border: 1px solid #CECECE;
  border-bottom: none;
  background: #e6e6f2;
  text-decoration: none;
  font-size: 0.9em;
  text-transform: uppercase;
}
ul#peopledir-tabs li a:hover {
  background-color: white;
  text-decoration: none;
}
ul#peopledir-tabs li.selected a {
  background: white;
  border-bottom: 1px solid white;
}

#peopledir-section ul {
  padding: 0px;
  margin-left: 0px;
}

#peopledir-content-wrapper {
  border: 1px solid #CECECE;
  padding: 2em 10px 1em;
  overflow: hidden;
}
#peopledir-section h3 {
  margin-left: 0px;
  margin-top: 10px;
}
#peopledir-section ul li {
  list-style: none;
  padding-left: 0px;
  margin-left: 0px;
  padding-top: 5px;
  padding-bottom: 5px;
}
#peopledir-section a.priority {
  padding-bottom: 5px;
  font-style: italic;
  font-weight: bold;
  display: block;
}

#peopledir-actions {
  width: 100px;
  clear: both;
  float: right;
}
#peopledir-actions ul {
  margin: 0px;
  float: right;
  padding: 0;
}
#peopledir-actions li {
  float: left;
  margin: 2px;
  list-style: none;
}
#peopledir-actions .ui-icon {
  height: 16px;
  width: 16px;
  margin: 0 4px
}
#peopledir-letterbox-wrapper {
  background: #F0F2F4 none repeat scroll 0 0;
  border: 1px solid #CECECE;
  font-size: 0.9em;
}
#peopledir-letterbox-wrapper .kalphabetlisting {
  margin-bottom: 0px;
  padding: 3px 10px;
}
#peopledir-search-box-wrapper {
  background-color: #ffffff;
  padding: 8px;
  border-right: 1px solid #cecece;
  border-bottom: 1px solid #cecece;
  border-left: 1px solid #cecece;
  margin-bottom: 10px;
}
/* ... */

